FIXED THE STUPID CUSTOM VISIBILITY

--- a/styles.css
+++ b/styles.css
@@ -97,7 +97,7 @@ p {
     width: 200px;
 }
 
-.slider {
+#slider {
     margin: 60px;
     padding-bottom: 20px;
 }
